Added jquery for search fields

--- a/index.html
+++ b/index.html
@@ -42,4 +42,7 @@
 	</footer>
 </body>
 
+<script type="text/javascript" src="js/portfolioJS/jquery-3.2.0.min.js"></script>
+<script type="text/javascript" src="js/portfolioJS/general.js"></script>
+
 </html>
