--- a/museumPage.html
+++ b/museumPage.html
@@ -18,7 +18,7 @@
 			</h1>
 
 			<form class="topForm desktop">
-				<input type="text" class="searchCMAField" name="searchCMA">
+				<input type="text" class="searchCMAField" name="searchCMA" value="Type in search">
 				<input class ="btn" type="submit" value="Search CMA">
 			</form>
 
@@ -64,20 +64,20 @@
 						
 						<div class="personal_info">
 							<label>First Name:</label>
-							<input type="text" class="input_field">
+							<input type="text" class="input_field" value="Type your first name here">
 							<label>Last Name:</label>
-							<input type="text" class="input_field">
+							<input type="text" class="input_field" value="Type your last name here">
 							<label>Address:</label>
-							<input type="text" class="input_field">
+							<input type="text" class="input_field" value="Type your address here">
 						</div>
 
 						<div class="contact_info">
 							<label>Choose a User Name:</label>
-							<input type="text" class="input_field">
+							<input type="text" class="input_field" value="Username">
 							<label>Email:</label>
-							<input type="text" class="input_field">
+							<input type="text" class="input_field" value="Type your email">
 							<label>Confirm Email:</label>
-							<input type="text" class="input_field">
+							<input type="text" class="input_field" value="Confirm email here">
 						</div>
 						
 					</div>
@@ -211,5 +211,8 @@
 
 
 </body>
+
+<script type="text/javascript" src="js/museumJS/jquery-3.2.0.min.js"></script>
+<script type="text/javascript" src="js/museumJS/general.js"></script>
 
 </html>
