--- a/shirtWidget.html
+++ b/shirtWidget.html
@@ -248,5 +248,8 @@
 
 	</body>
 
+<script type="text/javascript" src="js/tShirtJS/jquery-3.2.0.min.js"></script>
+<script type="text/javascript" src="js/tShirtJS/general.js"></script>
+
 </html>
-<script type="text/javascript" src="js/general.js"></script>
+
