Had to route images properly

--- a/htmlPages/form.html
+++ b/htmlPages/form.html
@@ -35,10 +35,10 @@
 		<footer>
 	<!-- &copy;Bharat Kumar Singh -->
 		<div>
-			<a href="https://facebook.com" target="_blank"><img class="footer-icons" src="imgs/facebook.png"/></a>
-			<a href="https://github.com" target="_blank"><img class="footer-icons" src="imgs/github.png"/></a>
-			<a href="https://instagram.com" target="_blank"><img class="footer-icons" src="imgs/insta.png"/></a>
-			<a href="https://linkedin.com" target="_blank"><img class="footer-icons" src="imgs/linkedin.png"/></a>
+			<a href="https://facebook.com" target="_blank"><img class="footer-icons" src="../imgs/portfolioImgs/facebook.png"/></a>
+			<a href="https://github.com" target="_blank"><img class="footer-icons" src="../imgs/portfolioImgs/github.png"/></a>
+			<a href="https://instagram.com" target="_blank"><img class="footer-icons" src="../imgs/portfolioImgs/insta.png"/></a>
+			<a href="https://linkedin.com" target="_blank"><img class="footer-icons" src="../imgs/portfolioImgs/linkedin.png"/></a>
 		</div>
 
 
