modifying portfolio html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 	</header>
 
 	<div class ="main">
-		<h1 class="name"> Portfolio of <p>B.K.S</p></h1>
+		<h1 class="name"> Portfolio of </h1>
+		<p>B.K.S</p>
 		<!-- <img src="imgs/portfolioImgs/bharatsingh.jpg"/> -->
 		
 	</div>
