Modified portfolio homepage

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 	<footer>
 	<!-- &copy;Bharat Kumar Singh -->
-		<div>
+		<div class="footer-content">
 			<a href="https://facebook.com" target="_blank"><img class="footer-icons" src="imgs/portfolioImgs/facebook.png"/></a>
 			<a href="https://github.com" target="_blank"><img class="footer-icons" src="imgs/portfolioImgs/github.png"/></a>
 			<a href="https://instagram.com" target="_blank"><img class="footer-icons" src="imgs/portfolioImgs/insta.png"/></a>
