--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 		<nav>
 			<a class="header-icons" href="htmlPages/form.html" target="_blank">Contact</a>
 			<a class="header-icons" href="http://codepen.io/bksinn/" target="_blank">Projects</a>
+			<a class="header-icons" href="museumPage.html" target="_blank">Columbia Museum of Art</a>
+			<a class="header-icons" href="shirtWidget.html" target="_blank">T-Shirt Widget</a>
 			<a class="header-icons" href="htmlPages/resume.html" target="_blank">Resume</a>
 		</nav>
 	</header>
