Added title to TShirt widget

--- a/shirtWidget.html
+++ b/shirtWidget.html
@@ -1,6 +1,7 @@
 <html>
 
 	<head>
+		<title>T-Shirt UI</title>
 		<meta charset="UTF-8">
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
