Working on drop-down for projects in portfolio

--- a/index.html
+++ b/index.html
@@ -15,11 +15,24 @@
 
 	<header>
 		<nav>
-			<a class="header-icons" href="htmlPages/form.html" target="_blank">Contact</a>
-			<a class="header-icons" href="http://codepen.io/bksinn/" target="_blank">Projects</a>
-			<a class="header-icons" href="museumPage.html" target="_blank">Columbia Museum of Art</a>
-			<a class="header-icons" href="shirtWidget.html" target="_blank">T-Shirt Widget</a>
-			<a class="header-icons" href="htmlPages/resume.html" target="_blank">Resume</a>
+			<div class="project-div">
+				<a class="header-icons" href="htmlPages/form.html" target="_blank">Contact</a>
+			</div>
+
+			<div class="project-div">
+				<a class="header-icons" href="http://codepen.io/bksinn/" target="_blank">Projects</a>
+
+				<div class="hidden-projects-div">
+					<a class="header-icons" href="museumPage.html" target="_blank">Columbia Museum of Art</a>
+					<a class="header-icons" href="shirtWidget.html" target="_blank">T-Shirt Widget</a>
+				</div>
+			</div>
+
+
+			<div class="project-div">
+				<a class="header-icons" href="htmlPages/resume.html" target="_blank">Resume</a>
+			</div>
+
 		</nav>
 	</header>
 
