Reformatted portfoli page layout

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 	<title>Bharat Singh Portfolio</title>
 	<!--link rel="stylesheet" type="text/css" href="form.css"-->
-	<link rel="stylesheet" type="text/css" href="css/portfolioCss/portfolio_main.css">
-	<link rel="stylesheet" type="text/css" href="css/iphone6.css">
+	<link rel="stylesheet" type="text/css" href="css/portfolioCss/style.css">
+	<link rel="stylesheet" type="text/css" href="css/portfolioCss/font-awesome.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="css/iphone6.css"> -->
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Italianno" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Catamaran|Lato|Noto+Sans" rel="stylesheet">
 
 </head>
 
@@ -15,43 +15,82 @@
 
 	<header>
 		<nav>
-			<div class="project-div">
-				<a class="header-icons" href="htmlPages/form.html" target="_blank">Contact</a>
+
+			<div class="name">
+				<h1> BKS </h1>
 			</div>
 
-			<div class="project-div">
-				<a class="header-icons" href="http://codepen.io/bksinn/" target="_blank">Projects</a>
+			<div class="nav-links">
 
-				<div class="hidden-projects-div">
+				<div class="nav-box">
+					<a class="header-icons" href="htmlPages/form.html" target="_blank">Contact</a>
+				</div>
+
+				<div class="nav-box">
+					<a class="header-icons" href="http://codepen.io/bksinn/" target="_blank">Projects</a>
+				</div>
+
+				<div class="nav-box">
+					<a class="header-icons" href="htmlPages/resume.html" target="_blank">Resume</a>
+				</div>
+
+<!-- 				<div class="hidden-projects-div">
 					<a class="header-icons" href="museumPage.html" target="_blank">Columbia Museum of Art</a>
 					<a class="header-icons" href="shirtWidget.html" target="_blank">T-Shirt Widget</a>
-				</div>
-			</div>
-
-
-			<div class="project-div">
-				<a class="header-icons" href="htmlPages/resume.html" target="_blank">Resume</a>
+				</div> -->
+				
 			</div>
 
 		</nav>
 	</header>
 
 	<div class ="main">
-		<h1 class="name"> Portfolio of </h1>
-		<p>B.K.S</p>
-		<!-- <img src="imgs/portfolioImgs/bharatsingh.jpg"/> -->
+		<p>Selected Work</p>
+
+
+		<hr>
+		<div class="wrapper"> 
+			<a class="projects code-pen" href="http://s.codepen.io/bksinn/debug/RorMQe/YvkgOPagoazk">
+				<div class="overlay"></div>
+			</a>
+
+			<a class="projects tshirt-widget" href="shirtWidget.html">
+				<div class="overlay"></div>
+			</a>
+
+			<a class="projects museum" href="museumPage.html">
+				<div class="overlay"></div>
+			</a>
+		</div> 
+		<hr>
+
+
+		
 		
 	</div>
 	
 <!-- FORM WENT HERE -->
 
 	<footer>
-	<!-- &copy;Bharat Kumar Singh -->
+	
 		<div class="footer-content">
-			<a href="https://facebook.com" target="_blank"><img class="footer-icons" src="imgs/portfolioImgs/facebook.png"/></a>
-			<a href="https://github.com" target="_blank"><img class="footer-icons" src="imgs/portfolioImgs/github.png"/></a>
-			<a href="https://instagram.com" target="_blank"><img class="footer-icons" src="imgs/portfolioImgs/insta.png"/></a>
-			<a href="https://linkedin.com" target="_blank"><img class="footer-icons" src="imgs/portfolioImgs/linkedin.png"/></a>
+
+			<a href="https://www.linkedin.com">
+				<i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i>
+			</a>
+
+			<a href="https://www.github.com">
+				<i class="fa fa-github fa-5x" aria-hidden="true"></i>
+			</a>
+
+			<a href="https://www.meetup.com">
+				<i class="fa fa-meetup fa-5x" aria-hidden="true"></i>
+			</a>
+
+			<a href="https://www.meetup.com">
+				<i class="fa fa-codepen fa-5x" aria-hidden="true"></i>
+			</a>
+
 		</div>
 
 
