Added bootstrap link in html head

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<!--link rel="stylesheet" type="text/css" href="form.css"-->
 	<link rel="stylesheet" type="text/css" href="css/portfolioCss/style.css">
 	<link rel="stylesheet" type="text/css" href="css/portfolioCss/font-awesome.min.css">
-	<!-- <link rel="stylesheet" type="text/css" href="css/iphone6.css"> -->
+	<link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap.min.css">
+	
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Catamaran|Lato|Noto+Sans" rel="stylesheet">
 
