Added overlay to portfolio index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/portfolioCss/style.css">
 	<link rel="stylesheet" type="text/css" href="css/portfolioCss/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap.min.css">
-	
+
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Catamaran|Lato|Noto+Sans" rel="stylesheet">
 
@@ -52,15 +52,21 @@
 		<hr>
 		<div class="wrapper"> 
 			<a class="projects code-pen" href="http://s.codepen.io/bksinn/debug/RorMQe/YvkgOPagoazk">
-				<div class="overlay"></div>
+				<div class="overlay">
+					<p>Search field that utilizes Wikipedia's API</p>
+				</div>
 			</a>
 
 			<a class="projects tshirt-widget" href="shirtWidget.html">
-				<div class="overlay"></div>
+				<div class="overlay">
+					<p>Dabbling with UI</p>
+				</div>
 			</a>
 
 			<a class="projects museum" href="museumPage.html">
-				<div class="overlay"></div>
+				<div class="overlay">
+					<p>From PNG to Website/Fully Responsive</p>
+				</div>
 			</a>
 		</div> 
 		<hr>
