Playing with background images

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 			<a class="projects museum" href="museumPage.html">
 				<div class="overlay">
-					<p>From PNG to Website/Fully Responsive</p>
+					<p>From PNG to Website. Fully Responsive</p>
 				</div>
 			</a>
 		</div> 
