--- a/htmlPages/form.html
+++ b/htmlPages/form.html
@@ -1,6 +1,6 @@
 <html>		
 	<head>
-		<link rel="stylesheet" type="text/css" href="../css/portfolioCss/style.css">
+		<link rel="stylesheet" type="text/css" href="../css/portfolioCss/portfolio_main.css">
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Italianno" rel="stylesheet">
