Adding target blanks

--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
 	
 		<div class="footer-content">
 
-			<a href="https://www.linkedin.com">
+			<a href="https://www.linkedin.com" target="_blank">
 				<i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i>
 			</a>
 
-			<a href="https://www.github.com">
+			<a href="https://www.github.com" target="_blank">
 				<i class="fa fa-github fa-5x" aria-hidden="true"></i>
 			</a>
 
-			<a href="https://www.meetup.com">
+			<a href="https://www.meetup.com" target="_blank">
 				<i class="fa fa-meetup fa-5x" aria-hidden="true"></i>
 			</a>
 
-			<a href="https://www.meetup.com">
+			<a href="https://www.meetup.com" target="_blank">
 				<i class="fa fa-codepen fa-5x" aria-hidden="true"></i>
 			</a>
 
