--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				<i class="fa fa-meetup fa-5x" aria-hidden="true"></i>
 			</a>
 
-			<a href="https://www.meetup.com" target="_blank">
+			<a href="https://www.codepen.io" target="_blank">
 				<i class="fa fa-codepen fa-5x" aria-hidden="true"></i>
 			</a>
 
