--- a/index.html
+++ b/index.html
@@ -112,13 +112,14 @@
         <div class="resume-section">
             <div class="container">
                 <div class="col-lg-8 offset-md-2">
-                    <h2>Place Resume Here</h2>
+                    <h2>Résumé</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <a href="htmlPages/Resume5.pdf">Click to view and/or download pdf version</a>
                     
                 </div>
             </div>
@@ -138,21 +139,21 @@
                 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <ul class="list-inline banner-social-buttons">
                     <li class="list-inline-item">
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter (use font awesome)</span></a>
+                        <a href="https://github.com/bksinn" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw fa-3x"></i> <span class="network-name"></span></a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://github.com/BlackrockDigital/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github(use font awesome)</span></a>
+                        <a href="https://meetup.com" class="btn btn-default btn-lg"><i class="fa fa-meetup fa-fw fa-3x"></i> <span class="network-name"></span></a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+(Use font awesome)</span></a>
+                        <a href="https://www.linkedin.com/in/bharat-singh-31881089/" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw fa-3x"></i> <span class="network-name"></span></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="http://codepen.io/bksinn/" class="btn btn-default btn-lg"><i class="fa fa-codepen fa-fw fa-3x"></i> <span class="network-name"></span></a>
                     </li>
                 </ul>
             </div>
         </div>
     </section>
-
-    <!-- Map Section -->
-    <div id="map"></div>
 
     <!-- Footer -->
     <footer>
@@ -168,9 +169,6 @@
 
     <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
 
     <!-- Custom scripts for this template -->
     <script src="js/portfolioJS/portfolio.min.js"></script>
