--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    <a href="htmlPages/Resume5.pdf">Click to view and/or download pdf version</a>
+                    <a href="htmlPages/Resume5.pdf" target="_blank">Click to view and/or download pdf version</a>
                     
                 </div>
             </div>
