--- a/index.html
+++ b/index.html
@@ -85,18 +85,29 @@
                 <a href="http://s.codepen.io/bksinn/debug/RorMQe/jVMpogjKVxmk" class="project-imgs wikipedia">
                     <div class="overlay">
                         <p>Search field that utilizes Wikipedia's API</p>
+                        <p class="project-description">Search Wikipedia</p>
+                        <p class="project-description">Very mininmalist layout that calls out to Wikipedia's public API and returns results within the page.</p>
+
+                        <p class="project-description">HTML, CSS, Bootstrap, Javascript, JSON, API, Jquery, AJAX</p> 
                     </div>
                 </a>
 
                 <a href="https://bksinn.github.io/museumPage.html" class="project-imgs museum">
                     <div class="overlay">
-                       <p>From PNG to website. Fully responsive.</p> 
+                        <p>From PNG to website. Fully responsive.</p>
+                        <p class="project-description">Columbia Museum of Art</p>
+                        <p class="project-description">Our first project at The Iron Yard. We were given mockups and tasked with making a responsive website.</p>
+
+                        <p class="project-description">HTML, CSS/SASS, Responsive Web Design</p> 
                     </div>
                 </a>
 
                 <a href="https://bksinn.github.io/shirtWidget.html" class="project-imgs tshirt">
                     <div class="overlay">
                         <p>Dabbling with UI</p>
+                        <p class="project-description">T-Shirt Widget</p>
+                        <p class="project-description">Created a user interface for a mock online shirt store.</p>
+                        <p class="project-description">HTML, CSS/SASS, Responsive Web Design, UI/UX</p> 
                     </div>
                 </a>
 
