Adding media queries to descriptions

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                     <div class="overlay">
                         <p>Search field that utilizes Wikipedia's API</p>
                         <p class="project-description">Search Wikipedia</p>
-                        <p class="project-description">Very mininmalist layout that calls out to Wikipedia's public API and returns results within the page.</p>
+                        <p class="project-description hide">Very mininmalist layout that calls out to Wikipedia's public API and returns results within the page.</p>
 
-                        <p class="project-description">HTML, CSS, Bootstrap, Javascript, JSON, API, Jquery, AJAX</p> 
+                        <p class="project-description hide">HTML, CSS, Bootstrap, Javascript, JSON, API, Jquery, AJAX</p> 
                     </div>
                 </a>
 
@@ -96,9 +96,9 @@
                     <div class="overlay">
                         <p>From PNG to website. Fully responsive.</p>
                         <p class="project-description">Columbia Museum of Art</p>
-                        <p class="project-description">Our first project at The Iron Yard. We were given mockups and tasked with making a responsive website.</p>
+                        <p class="project-description hide">Our first project at The Iron Yard. We were given mockups and tasked with making a responsive website.</p>
 
-                        <p class="project-description">HTML, CSS/SASS, Responsive Web Design</p> 
+                        <p class="project-description hide">HTML, CSS/SASS, Responsive Web Design</p> 
                     </div>
                 </a>
 
@@ -106,8 +106,8 @@
                     <div class="overlay">
                         <p>Dabbling with UI</p>
                         <p class="project-description">T-Shirt Widget</p>
-                        <p class="project-description">Created a user interface for a mock online shirt store.</p>
-                        <p class="project-description">HTML, CSS/SASS, Responsive Web Design, UI/UX</p> 
+                        <p class="project-description hide">Created a user interface for a mock online shirt store.</p>
+                        <p class="project-description hide">HTML, CSS/SASS, Responsive Web Design, UI/UX</p> 
                     </div>
                 </a>
 
