Adding slide up effect

--- a/museumPage.html
+++ b/museumPage.html
@@ -2,6 +2,7 @@
 <head>
 	<title>Columbia Museum Homepage</title>
 	<link rel="stylesheet" type="text/css" href="css/museumCss/museumCSS.css">
+	<link rel="stylesheet" type="text/css" href="css/tShirtCss/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:800" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,14 +23,15 @@
 				<input class ="btn" type="submit" value="Search CMA">
 			</form>
 
+			<i id="mobile-menu" class="fa fa-caret-down fa-4x"></i>	
 			<nav>
-				<p><a href="#">Visit</a></p>
-				<p><a href="#">Learn</a></p>
-				<p><a href="#">Art</a></p>
-				<p><a href="#">Events</a></p>
-				<p><a href="#">Give &amp; Join</a></p>	
-				<p><a href="#">About</a></p>
-			</nav>	
+					<p><a href="#">Visit</a></p>
+					<p><a href="#">Learn</a></p>
+					<p><a href="#">Art</a></p>
+					<p><a href="#">Events</a></p>
+					<p><a href="#">Give &amp; Join</a></p>	
+					<p><a href="#">About</a></p>
+			</nav>
 
 		</header>
 
