Adding font styles to portfolio project titles

--- a/index.html
+++ b/index.html
@@ -81,33 +81,34 @@
 
     <!-- About Section -->
     <section id="projects" class="container">
+
         <div class="row">
+            <h3>Selected work</h3>
                 <a href="http://s.codepen.io/bksinn/debug/RorMQe/jVMpogjKVxmk" class="project-imgs wikipedia">
                     <div class="overlay">
                         <p>Search field that utilizes Wikipedia's API</p>
-                        <p class="project-description">Search Wikipedia</p>
-                        <p class="project-description hide">Very mininmalist layout that calls out to Wikipedia's public API and returns results within the page.</p>
+                        <h3 class="project-description title-description">Search Wikipedia</h3>
+                        <p class="project-description hide">Very mininmalist layout that calls out to Wikipedia's public API and returns results within the page. Technologies used: HTML, CSS, Bootstrap, Javascript, JSON, API, Jquery, AJAX
+                        </p>
 
-                        <p class="project-description hide">HTML, CSS, Bootstrap, Javascript, JSON, API, Jquery, AJAX</p> 
+                       
                     </div>
                 </a>
 
                 <a href="https://bksinn.github.io/museumPage.html" class="project-imgs museum">
                     <div class="overlay">
                         <p>From PNG to website. Fully responsive.</p>
-                        <p class="project-description">Columbia Museum of Art</p>
-                        <p class="project-description hide">Our first project at The Iron Yard. We were given mockups and tasked with making a responsive website.</p>
-
-                        <p class="project-description hide">HTML, CSS/SASS, Responsive Web Design</p> 
+                        <h3 class="project-description title-description">Columbia Museum of Art</h3>
+                        <p class="project-description hide">Our first project at The Iron Yard. We were given mockups and tasked with making a responsive website. Technologies used: HTML, CSS/SASS, Responsive Web Design</p> 
                     </div>
                 </a>
 
                 <a href="https://bksinn.github.io/shirtWidget.html" class="project-imgs tshirt">
                     <div class="overlay">
                         <p>Dabbling with UI</p>
-                        <p class="project-description">T-Shirt Widget</p>
-                        <p class="project-description hide">Created a user interface for a mock online shirt store.</p>
-                        <p class="project-description hide">HTML, CSS/SASS, Responsive Web Design, UI/UX</p> 
+                        <h3 class="project-description title-description">T-Shirt Widget</h3>
+                        <p class="project-description hide">Created a user interface for a mock online shirt store. Technologies used: HTML, CSS/SASS, Responsive Web Design, UI/UX </p>
+                        
                     </div>
                 </a>
 
