Adding a big ass drop-down arrow

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <h1 class="brand-heading">Bharat K Singh</h1>
                         <p class="intro-text">front end developer</p>
                         <a href="#projects" class="page-scroll">
-                            <i class="fa fa-angle-double-down fa-3x animated"></i>
+                            <i class="fa fa-angle-double-down fa-5x animated btn-circle"></i>
                         </a>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
             </div>
         </div>
     </section>
-    
+
     <!-- Download Section -->
     <section id="resume" class="content-section text-center">
         <div class="resume-section">
