--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- Navigation -->
     <nav id="mainNav" class="navbar fixed-top navbar-toggleable-md navbar-light">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarExample" aria-controls="navbarExample" aria-expanded="false" aria-label="Toggle navigation">
-            Menu <i class="fa fa-bars"></i>
+          <i class="fa fa-bars"></i>
         </button>
         <div class="container">
             <a class="navbar-brand" href="#page-top">BKS</a>
