--- a/index.html
+++ b/index.html
@@ -124,12 +124,7 @@
             <div class="container">
                 <div class="col-lg-8 offset-md-2">
                     <h2>Résumé</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>Coming soon.</p>
                     <a href="htmlPages/BharatSingh-Resume.pdf" target="_blank">Click to view and/or download pdf version</a>
                     
                 </div>
@@ -141,13 +136,8 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 offset-md-2">
-                <h2>Place my contact info here.</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h2>Contact me.</h2>
+                <p>Coming soon.</p>
                 <ul class="list-inline banner-social-buttons">
                     <li class="list-inline-item">
                         <a href="https://github.com/bksinn"><i class="fa fa-github fa-fw fa-3x"></i> <span class="network-name"></span></a>
