--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <section id="projects" class="container">
         <div class="row">
             <h3>Selected work</h3>
-                <a href="http://s.codepen.io/bksinn/debug/RorMQe/jVMpogjKVxmk" class="project-imgs wikipedia">
+                <a href="http://codepen.io/bksinn/full/RorMQe/" class="project-imgs wikipedia">
                     <div class="overlay">
                         <p>Search field that utilizes Wikipedia's API</p>
                         <h3 class="project-description title-description">Search Wikipedia</h3>
