--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="resume-section">
             <div class="container">
                 <div class="col-lg-8 offset-md-2">
-                    <h2>Résumé</h2>
+                    <h2>Resume</h2>
                         <section id="cd-timeline" class="cd-container">
                                 <div class="cd-timeline-block">
                                     <div class="cd-timeline-img cd-picture">
