--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
     <footer>
         <div class="container text-center">
             <p>Copyright &copy; Bharat Kumar Singh 2017</p>
+            <a href="google3256296f979fcf0c.html"></a>
         </div>
     </footer>
 
