--- a/index.html
+++ b/index.html
@@ -394,9 +394,9 @@
             </section> -->
             <section id="contact" class="contact section">
                 <div class="container">
-                    <h2 class="title">Drop us a line</h2>
+                    <h2 class="title">Contact me</h2>
                     <div class="row">
-                        <div class="col-sm-4">
+                        <!--<div class="col-sm-4">
                             <div class="vira-card">
                                 <div class="vira-card-header">
                                         <span class="fa fa-map-o" aria-hidden="true"></span>
@@ -408,33 +408,37 @@
                                     </p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="vira-card">
-                                <div class="vira-card-header">
-                                        <span class="fa fa-phone" aria-hidden="true"></span>
-                                </div>
-                                <div class="vira-card-content">
-                                    <h3>Phone</h3>
-                                    <p>
-                                        +555 211 3747
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="vira-card">
-                                <div class="vira-card-header">
-                                        <span class="fa fa-paper-plane" aria-hidden="true"></span>
-                                </div>
-                                <div class="vira-card-content">
-                                    <h3>Email</h3>
-                                    <p>
-                                        hey@themewagon.com
-                                    </p>
+                        </div>-->
+                        <a href="tel:8037470640" class="contact-overlay">
+                            <div class="col-sm-6">
+                                <div class="vira-card">
+                                    <div class="vira-card-header">
+                                            <span class="fa fa-phone" aria-hidden="true"></span>
+                                    </div>
+                                    <div class="vira-card-content">
+                                        <h3 class="contact-description">Phone</h3>
+                                        <p>
+                                            +803 747 0640
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
+                        <a href="mailto:bksingh@g.cofc.edu?Subject=Great to meet you" class="contact-overlay">
+                            <div class="col-sm-6">
+                                <div class="vira-card">
+                                    <div class="vira-card-header">
+                                            <span class="fa fa-paper-plane" aria-hidden="true"></span>
+                                    </div>
+                                    <div class="vira-card-content">
+                                        <h3 class="contact-description">Email</h3>
+                                        <p>
+                                            bksingh@g.cofc.edu
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
                         <div class="col-sm-12">
                             <div class="social-icons">
                                 <ul>
