Readding sticky header

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 
         <title>Bharat K. Singh | Portfolio</title>
         <link rel="shortcut icon" type="image/x-icon" href="assets/images/logo.png"/>
-        <style>
+        <!--<style>
             html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}body{margin:0}header,nav{display:block}a{background-color:transparent}h1{margin:.67em 0;font-size:2em}img{border:0}*{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}:after,:before{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}html{font-size:10px}body{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:14px;line-height:1.42857143;color:#333;background-color:#fff}a{color:#337ab7;text-decoration:none}img{vertical-align:middle}.img-responsive{display:block;max-width:100%;height:auto}h1,h3{font-family:inherit;font-weight:500;line-height:1.1;color:inherit}h1,h3{margin-top:20px;margin-bottom:10px}h1{font-size:36px}h3{font-size:24px}p{margin:0 0 10px}.text-right{text-align:right}ul{margin-top:0;margin-bottom:10px}.container{padding-right:15px;padding-left:15px;margin-right:auto;margin-left:auto}@media (min-width:768px){.container{width:750px}}@media (min-width:992px){.container{width:970px}}@media (min-width:1200px){.container{width:1170px}}.row{margin-right:-15px;margin-left:-15px}.col-xs-6{position:relative;min-height:1px;padding-right:15px;padding-left:15px}.col-xs-6{float:left}.col-xs-6{width:50%}.btn{display:inline-block;padding:6px 12px;margin-bottom:0;font-size:14px;font-weight:400;line-height:1.42857143;text-align:center;white-space:nowrap;vertical-align:middle;-ms-touch-action:manipulation;touch-action:manipulation;background-image:none;border:1px solid transparent;border-radius:4px}.navbar{position:relative;min-height:50px;margin-bottom:20px;border:1px solid transparent}@media (min-width:768px){.navbar{border-radius:4px}}.navbar-default{background-color:#f8f8f8;border-color:#e7e7e7}.container:after,.container:before,.navbar:after,.navbar:before,.row:after,.row:before{display:table;content:" "}.container:after,.navbar:after,.row:after{clear:both}@-ms-viewport{width:device-width}.owl-carousel{display:none;width:100%;position:relative;z-index:1}@charset "UTF-8";.bg-img,.header{background-size:cover;background-repeat:no-repeat}.intro-box,.menu-item,.vira-card{text-align:center}@font-face{font-family:Lora;font-style:italic;font-weight:400;src:local('Lora Italic'),local('Lora-Italic'),url(https://fonts.gstatic.com/s/lora/v12/DeoOq1kX9ExfArSHppos_g.ttf) format('truetype')}@font-face{font-family:Lora;font-style:normal;font-weight:400;src:local('Lora Regular'),local('Lora-Regular'),url(https://fonts.gstatic.com/s/lora/v12/4A-myfZX6oDr9CtSTkTGig.ttf) format('truetype')}@font-face{font-family:Lora;font-style:normal;font-weight:700;src:local('Lora Bold'),local('Lora-Bold'),url(https://fonts.gstatic.com/s/lora/v12/rapsGf8n-DpRu9kcmAAciA.ttf) format('truetype')}@font-face{font-family:Raleway;font-style:normal;font-weight:300;src:local('Raleway Light'),local('Raleway-Light'),url(https://fonts.gstatic.com/s/raleway/v12/-_Ctzj9b56b8RgXW8FAriS3USBnSvpkopQaUR-2r7iU.ttf) format('truetype')}@font-face{font-family:Raleway;font-style:normal;font-weight:600;src:local('Raleway SemiBold'),local('Raleway-SemiBold'),url(https://fonts.gstatic.com/s/raleway/v12/xkvoNo9fC8O2RDydKj12by3USBnSvpkopQaUR-2r7iU.ttf) format('truetype')}@font-face{font-family:Raleway;font-style:normal;font-weight:700;src:local('Raleway Bold'),local('Raleway-Bold'),url(https://fonts.gstatic.com/s/raleway/v12/JbtMzqLaYbbbCL9X6EvaIy3USBnSvpkopQaUR-2r7iU.ttf) format('truetype')}@font-face{font-family:Raleway;font-style:normal;font-weight:900;src:local('Raleway Black'),local('Raleway-Black'),url(https://fonts.gstatic.com/s/raleway/v12/PKCRbVvRfd5n7BTjtGiFZC3USBnSvpkopQaUR-2r7iU.ttf) format('truetype')}@font-face{font-family:Ionicons;src:url(https://code.ionicframework.com/ionicons/2.0.1/fonts/ionicons.eot?v=2.0.1);src:url(https://code.ionicframework.com/ionicons/2.0.1/fonts/ionicons.eot?v=2.0.1#iefix) format("embedded-opentype"),url(https://code.ionicframework.com/ionicons/2.0.1/fonts/ionicons.ttf?v=2.0.1) format("truetype"),url(https://code.ionicframework.com/ionicons/2.0.1/fonts/ionicons.woff?v=2.0.1) format("woff"),url(https://code.ionicframework.com/ionicons/2.0.1/fonts/ionicons.svg?v=2.0.1#Ionicons) format("svg");font-weight:400;font-style:normal}.ion-navicon:before{display:inline-block;font-family:Ionicons;speak:none;font-style:normal;font-weight:400;font-variant:normal;text-transform:none;text-rendering:auto;line-height:1;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.vira-btn,p{font-style:italic}.ion-navicon:before{content:"\f20e"}.bg-img:after,.vira-card .vira-card-content h3:after{content:''}body{font-family:Raleway,Lora,serif}h1,h3{font-family:Raleway,sans-serif;text-transform:uppercase;color:#424242;margin-bottom:35px;margin-top:0}h1{font-size:8rem}h3{font-size:21px}p{font-size:16px;color:#818181}.navbar-vira{border-radius:0;background-color:transparent}.menu{display:inline-block}.navbar-vira{background-image:none;margin-bottom:0;border-color:transparent}.bg-img{position:relative}.bg-img div{z-index:1;position:relative}.bg-img:after{position:absolute;height:100%;width:100%;background-color:rgba(0,0,0,.5);left:0;top:0}.vira-card .vira-card-header{margin-bottom:45px}.vira-card .vira-card-content h3{position:relative;margin-bottom:60px}.vira-card .vira-card-content h3:after{height:1px;width:44px;background-color:#62aa94;position:absolute;top:52px;left:calc(50% - 22px)}.hide-menu,.menu{position:relative}.vira-card .vira-card-content p{font-size:15px}.vira-btn{border-color:#51c2b9;color:#51c2b9;border-radius:0;letter-spacing:3px;padding:15px 80px;margin-bottom:30px;background-color:transparent}.menu-item{background-color:#1a1a1a;font-size:16px;text-transform:uppercase}.menu-item ul{padding-left:0;margin-bottom:0}.menu-item ul a li,.navigation-bar{border-bottom:1px solid rgba(255,255,255,.2);padding:15px 0}.menu-item ul a li{list-style-type:none;color:#fff}.hide-menu{margin-top:-212px}.navigation-bar{font-size:30px}.navigation-bar a{color:#fff}.menu:after{position:absolute;left:-65px;top:10px;color:#fff;font-size:16px}.m:after{content:'MENU'}body:before{content:''}.header{background-image:url(../assets/images/malibu-compressor.jpg);height:100%;background-position:center;position:relative;min-height:659px}.intro-box{height:100vh;display:table;width:100%}.intro{display:table-cell;vertical-align:middle}@media (max-width:500px){.intro{vertical-align:0;padding-top:45%}}.header h1{margin:0}.header h1,.header p{color:#fff;letter-spacing:5px}.header p{font-size:32px;padding-top:0;padding-bottom:40px}.header .vira-btn{border-color:#fff;color:#fff}.hidden-arrow{display:none}@media (max-width:767px){.vira-card{margin-bottom:60px}h1{font-size:2.5em}.header p{font-size:1.5em}}.img-responsive{border:2px solid #424242}.overlay .project-description{display:none}.tech-sentence{font-weight:700}body:before{position:fixed;top:0;left:50%;bottom:150px;transform:translateX(-50%);width:4px;background-color:#fff;z-index:0}
+        </style>-->
+        <!--Nav styles taken out because interfering with sticky header from script-->
+        <style>
+            html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}body{margin:0}header,a{background-color:transparent}h1{margin:.67em 0;font-size:2em}img{border:0}*{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}:after,:before{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}html{font-size:10px}body{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:14px;line-height:1.42857143;color:#333;background-color:#fff}a{color:#337ab7;text-decoration:none}img{vertical-align:middle}.img-responsive{display:block;max-width:100%;height:auto}h1,h3{font-family:inherit;font-weight:500;line-height:1.1;color:inherit}h1,h3{margin-top:20px;margin-bottom:10px}h1{font-size:36px}h3{font-size:24px}p{margin:0 0 10px}.text-right{text-align:right}ul{margin-top:0;margin-bottom:10px}.container{padding-right:15px;padding-left:15px;margin-right:auto;margin-left:auto}@media (min-width:768px){.container{width:750px}}@media (min-width:992px){.container{width:970px}}@media (min-width:1200px){.container{width:1170px}}.row{margin-right:-15px;margin-left:-15px}.col-xs-6{position:relative;min-height:1px;padding-right:15px;padding-left:15px}.col-xs-6{float:left}.col-xs-6{width:50%}.btn{display:inline-block;padding:6px 12px;margin-bottom:0;font-size:14px;font-weight:400;line-height:1.42857143;text-align:center;white-space:nowrap;vertical-align:middle;-ms-touch-action:manipulation;touch-action:manipulation;background-image:none;border:1px solid transparent;border-radius:4px}.container:after,.container:before,.row:after,.row:before{display:table;content:" "}.container:after,.row:after{clear:both}@-ms-viewport{width:device-width}.owl-carousel{display:none;width:100%;position:relative;z-index:1}@charset "UTF-8";.bg-img,.header{background-size:cover;background-repeat:no-repeat}.intro-box,.menu-item,.vira-card{text-align:center}@font-face{font-family:Lora;font-style:italic;font-weight:400;src:local('Lora Italic'),local('Lora-Italic'),url(https://fonts.gstatic.com/s/lora/v12/DeoOq1kX9ExfArSHppos_g.ttf) format('truetype')}@font-face{font-family:Lora;font-style:normal;font-weight:400;src:local('Lora Regular'),local('Lora-Regular'),url(https://fonts.gstatic.com/s/lora/v12/4A-myfZX6oDr9CtSTkTGig.ttf) format('truetype')}@font-face{font-family:Lora;font-style:normal;font-weight:700;src:local('Lora Bold'),local('Lora-Bold'),url(https://fonts.gstatic.com/s/lora/v12/rapsGf8n-DpRu9kcmAAciA.ttf) format('truetype')}@font-face{font-family:Raleway;font-style:normal;font-weight:300;src:local('Raleway Light'),local('Raleway-Light'),url(https://fonts.gstatic.com/s/raleway/v12/-_Ctzj9b56b8RgXW8FAriS3USBnSvpkopQaUR-2r7iU.ttf) format('truetype')}@font-face{font-family:Raleway;font-style:normal;font-weight:600;src:local('Raleway SemiBold'),local('Raleway-SemiBold'),url(https://fonts.gstatic.com/s/raleway/v12/xkvoNo9fC8O2RDydKj12by3USBnSvpkopQaUR-2r7iU.ttf) format('truetype')}@font-face{font-family:Raleway;font-style:normal;font-weight:700;src:local('Raleway Bold'),local('Raleway-Bold'),url(https://fonts.gstatic.com/s/raleway/v12/JbtMzqLaYbbbCL9X6EvaIy3USBnSvpkopQaUR-2r7iU.ttf) format('truetype')}@font-face{font-family:Raleway;font-style:normal;font-weight:900;src:local('Raleway Black'),local('Raleway-Black'),url(https://fonts.gstatic.com/s/raleway/v12/PKCRbVvRfd5n7BTjtGiFZC3USBnSvpkopQaUR-2r7iU.ttf) format('truetype')}@font-face{font-family:Ionicons;src:url(https://code.ionicframework.com/ionicons/2.0.1/fonts/ionicons.eot?v=2.0.1);src:url(https://code.ionicframework.com/ionicons/2.0.1/fonts/ionicons.eot?v=2.0.1#iefix) format("embedded-opentype"),url(https://code.ionicframework.com/ionicons/2.0.1/fonts/ionicons.ttf?v=2.0.1) format("truetype"),url(https://code.ionicframework.com/ionicons/2.0.1/fonts/ionicons.woff?v=2.0.1) format("woff"),url(https://code.ionicframework.com/ionicons/2.0.1/fonts/ionicons.svg?v=2.0.1#Ionicons) format("svg");font-weight:400;font-style:normal}.ion-navicon:before{display:inline-block;font-family:Ionicons;speak:none;font-style:normal;font-weight:400;font-variant:normal;text-transform:none;text-rendering:auto;line-height:1;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.vira-btn,p{font-style:italic}.ion-navicon:before{content:"\f20e"}.bg-img:after,.vira-card .vira-card-content h3:after{content:''}body{font-family:Raleway,Lora,serif}h1,h3{font-family:Raleway,sans-serif;text-transform:uppercase;color:#424242;margin-bottom:35px;margin-top:0}h1{font-size:8rem}h3{font-size:21px}p{font-size:16px;color:#818181}.menu{display:inline-block}.bg-img{position:relative}.bg-img div{z-index:1;position:relative}.bg-img:after{position:absolute;height:100%;width:100%;background-color:rgba(0,0,0,.5);left:0;top:0}.vira-card .vira-card-header{margin-bottom:45px}.vira-card .vira-card-content h3{position:relative;margin-bottom:60px}.vira-card .vira-card-content h3:after{height:1px;width:44px;background-color:#62aa94;position:absolute;top:52px;left:calc(50% - 22px)}.hide-menu,.menu{position:relative}.vira-card .vira-card-content p{font-size:15px}.vira-btn{border-color:#51c2b9;color:#51c2b9;border-radius:0;letter-spacing:3px;padding:15px 80px;margin-bottom:30px;background-color:transparent}.menu-item{background-color:#1a1a1a;font-size:16px;text-transform:uppercase}.menu-item ul{padding-left:0;margin-bottom:0}.menu-item ul a li,.menu-item ul a li{list-style-type:none;color:#fff}.hide-menu{margin-top:-212px}.menu:after{position:absolute;left:-65px;top:10px;color:#fff;font-size:16px}.m:after{content:'MENU'}body:before{content:''}.header{background-image:url(../assets/images/malibu-compressor.jpg);height:100%;background-position:center;position:relative;min-height:659px}.intro-box{height:100vh;display:table;width:100%}.intro{display:table-cell;vertical-align:middle}@media (max-width:500px){.intro{vertical-align:0;padding-top:45%}}.header h1{margin:0}.header h1,.header p{color:#fff;letter-spacing:5px}.header p{font-size:32px;padding-top:0;padding-bottom:40px}.header .vira-btn{border-color:#fff;color:#fff}.hidden-arrow{display:none}@media (max-width:767px){.vira-card{margin-bottom:60px}h1{font-size:2.5em}.header p{font-size:1.5em}}.img-responsive{border:2px solid #424242}.overlay .project-description{display:none}.tech-sentence{font-weight:700}body:before{position:fixed;top:0;left:50%;bottom:150px;transform:translateX(-50%);width:4px;background-color:#fff;z-index:0}
         </style>
         <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -188,58 +192,6 @@
                     </div>
                 </div>
             </section>
-            <!--<section class="purpose section">
-                <div class="container">
-                    <h2 class="title">Expertise</h2>
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <div class="vira-card">
-                                <div class="vira-card-header">
-                                    <div class="card-icon">
-                                        <span class="fa fa-diamond" aria-hidden="true"></span>
-                                    </div>
-                                </div>
-                                <div class="vira-card-content">
-                                    <h3>Digital Design</h3>
-                                    <p>
-                                        Complimenten, bewonderend gefluit en lonkende blikken zijn enkele risico’s die The Garment Club met zichlaim meebrengt. Onze enige missiede
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="vira-card">
-                                <div class="vira-card-header">
-                                    <div class="card-icon">
-                                        <span class="fa fa-cogs" aria-hidden="true"></span>
-                                    </div>
-                                </div>
-                                <div class="vira-card-content">
-                                    <h3>Web Development</h3>
-                                    <p>
-                                        Complimenten, bewonderend gefluit en lonkende blikken zijn enkele risico’s die The Garment Club met zichlaim meebrengt. Onze enige missiede
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="vira-card">
-                                <div class="vira-card-header">
-                                    <div class="card-icon">
-                                        <span class="fa fa-bicycle" aria-hidden="true"></span>
-                                    </div>
-                                </div>
-                                <div class="vira-card-content">
-                                    <h3>Digital Marketing</h3>
-                                    <p>
-                                        Complimenten, bewonderend gefluit en lonkende blikken zijn enkele risico’s die The Garment Club met zichlaim meebrengt. Onze enige missiede
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>-->
             <section id="contact" class="contact section">
                 <div class="container">
                     <h2 class="title">Contact me</h2>
@@ -320,7 +272,7 @@
 
 
 
-        <script type="text/javascript" src="public/main-8166db8048.js"></script>
+        <script type="text/javascript" src="public/main-0116b4e363.js"></script>
         <!--<script src="assets/js/jquery-3.1.1.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
         <script async src="assets/js/owl.carousel.min.js"></script>
@@ -348,7 +300,7 @@
               $(".vira-btn").addClass("bigger");
               $(".hidden-arrow").removeClass("hidden-arrow").addClass("visible-arrow");
             }, delayMillis);
-            
+
         </script>
 
 
