Redefining project paths, removing social media icons, adding media queries for resume section

--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
             <section id="projects" class="work section">
                 <div class="container">
                     <h2 class="title">Selected work</h2>
+                    <div class="mobile-message">
+                        <h3 class="mobile-message"><i class="fa fa-chevron-left" aria-hidden="true"></i>SWIPE<i class="fa fa-chevron-right" aria-hidden="true"></i></h3>
+                    </div>    
                     <div id="workstation-slider" class="owl-carousel">
                         <div class="item">
                             <div class="vira-card">
@@ -226,7 +229,7 @@
                                 </div>
                             </div>
                         </a>
-                        <div class="col-sm-12">
+                        <!--<div class="col-sm-12">
                             <div class="social-icons">
                                 <ul>
                                     <a href="#"><li><span class="ion-social-facebook"></span></li></a>
@@ -234,7 +237,7 @@
                                     <a href="#"><li><span class="ion-social-pinterest"></span></li></a>
                                 </ul>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
             </section>
@@ -256,7 +259,7 @@
         <link href="assets/css/magnific-popup.css" rel="stylesheet">
 
         <!--<link href="assets/css/style.css" rel="stylesheet">-->
-        <link href="public/main-01452adf47.css" rel="stylesheet">    
+        <link href="public/main-9702253e35.css" rel="stylesheet">    
 
         <script>
         var cb = function() {
